log
Thu Apr  7 15:12:37 UTC 2022: 
 tests:  0|6
total_score: 0/70
a85f98d
Thu Apr  7 15:26:24 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
test.c: In function ‘createMap’:
hashmap.c:57:15: error: ‘new’ is used uninitialized in this function [-Werror=uninitialized]
   new->current=-1;
   ~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
79b4229
Thu Apr  7 15:32:57 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘*new->buckets’ is a pointer; did you mean to use ‘->’?
   new->buckets->key=NULL;
               ^~
               ->
Compilation failed
9c1c0ac
Thu Apr  7 15:33:09 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
14d6a48
Thu Apr  7 15:33:18 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ca97b3d
Thu Apr  7 15:37:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: array subscript is not an integer
   new->buckets[NULL];
               ^
Compilation failed
0c2afa7
Thu Apr  7 15:37:54 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: statement with no effect [-Werror=unused-value]
   new->buckets[10];
   ~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
f25a1c9
